# Sigma-Memory-Agent-0.1

./: .env.example  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
api/: demo.py  main.py
examples/: basic_usage.py  paper_trading_demo.py
sma/: __init__.py  classifier.py  client.py  context_manager.py  memory_store.py  retriever.py  retry_utils.py
tests/: test_client.py
